[package]
name = "gpt-repl"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Wieczorek <mail@jakubw.eu>"]
license = "MIT"
homepage = "https://jakubw.eu"

[dependencies]
anyhow = "1"
async-stream = "0.3"
directories = "5"
futures-util = { version = "0.3", features = ["io"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rustyline = { version = "12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
structopt = "0.3"
tokio = { version = "1", features = ["full", "signal"] }
toml = { version = "0.7" }
